# learnopengl-rs

./: .gitignore  Cargo.toml  README.md  justfile
examples/@template/: Cargo.toml
examples/@template/src/: main.rs
examples/ch5_hello_triangle/: Cargo.toml
examples/ch5_hello_triangle/src/: main.rs
examples/ch6_shaders/more_complex_vbo/: Cargo.toml
examples/ch6_shaders/more_complex_vbo/src/: main.rs
examples/ch6_shaders/more_complex_vbo/src/shaders/: vertex.glsl
examples/ch6_shaders/test_shader_lang/: Cargo.toml
examples/ch6_shaders/test_shader_lang/src/: main.rs
examples/ch6_shaders/test_shader_lang/src/shaders/: example_shader.glsl  uniform.glsl
examples/part1/ch5_hello_triangle/: Cargo.toml
examples/part1/ch6_shaders/more_complex_vbo/src/: main.rs
examples/part1/ch6_shaders/more_complex_vbo_shader_utils/: Cargo.toml
examples/part1/ch6_shaders/more_complex_vbo_shader_utils/src/: main.rs
examples/part1/ch6_shaders/test_shader_lang/: Cargo.toml
examples/part1/ch7_textures/texture_test/: Cargo.toml
examples/part1/ch7_textures/texture_test/src/: main.rs
examples/part1/ch7_textures/texture_wrapping/: Cargo.toml
src/@template/: Cargo.toml
src/@template/src/: main.rs
src/@template/src/shaders/: fragment.glsl
src/part1/ch5_hello_triangle/: Cargo.toml
src/part1/ch5_hello_triangle/src/: main.rs
src/part1/ch5_hello_triangle/src/shaders/: shader1.glsl
src/part1/ch6_shaders/more_complex_vbo/: Cargo.toml
src/part1/ch6_shaders/more_complex_vbo/src/: main.rs
src/part1/ch6_shaders/more_complex_vbo_shader_utils/: Cargo.toml
src/part1/ch6_shaders/more_complex_vbo_shader_utils/src/: main.rs
src/part1/ch6_shaders/more_complex_vbo_shader_utils/src/shaders/: vertex.glsl
src/part1/ch6_shaders/test_shader_lang/: Cargo.toml
src/part1/ch6_shaders/test_shader_lang/src/: main.rs
src/part1/ch7_textures/exercise_texture_mix_keyboard/: Cargo.toml
src/part1/ch7_textures/exercise_texture_mix_keyboard/src/: main.rs
src/part1/ch7_textures/exercise_texture_mix_keyboard/src/shaders/: fragment.glsl
src/part1/ch7_textures/texture_test/: Cargo.toml
src/part1/ch7_textures/texture_test/src/: main.rs
src/part1/ch7_textures/texture_test/src/shaders/: fragment.glsl
src/part1/ch7_textures/texture_unit_test/: Cargo.toml
src/part1/ch7_textures/texture_unit_test/src/: main.rs
src/part1/ch8_transformations/glm/: Cargo.toml
src/part1/ch8_transformations/glm/src/: main.rs
src/testing/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/data/: mod.rs
utils/src/data/triangle/: mod.rs
utils/src/input/: mod.rs
utils/src/shader/: mod.rs
utils/src/shader/test/: fragment.glsl  main.rs  vertex.glsl
