[workspace]
members = [
    'utils',
    'examples/part1/ch5_hello_triangle',

    'examples/part1/ch6_shaders/test_shader_lang',
    'examples/part1/ch6_shaders/more_complex_vbo',
    'examples/part1/ch6_shaders/more_complex_vbo_shader_utils',

    'examples/part1/ch7_textures/texture_wrapping',
]

[workspace.package]
authors = ["Kuriko Moe"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytemuck = "1.11.0"
gl = "0.14.0"
once_cell = "1.13.0"
glutin = "0.29.1"
anyhow = "1.0.61"
thiserror = "1.0.32"
chrono = "0.4.21"

[workspace.dependencies.learnopengl-utils]
path = 'utils'

