[workspace]
members = [
    'utils',
    'src/testing',

    'src/part1/ch5_hello_triangle',

    'src/part1/ch6_shaders/test_shader_lang',
    'src/part1/ch6_shaders/more_complex_vbo',
    'src/part1/ch6_shaders/more_complex_vbo_shader_utils',

    'src/part1/ch7_textures/texture_test',
    'src/part1/ch7_textures/texture_unit_test',
    'src/part1/ch7_textures/exercise_texture_mix_keyboard',

    'src/part1/ch8_transformations/glm',
]

[workspace.package]
authors = ["Kuriko Moe"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytemuck = "1.12.1"
gl = "0.14.0"
once_cell = "1.15.0"
glutin = "0.29.1"
anyhow = "1.0.65"
thiserror = "1.0.37"
chrono = "0.4.22"
image = "0.24.4"
partial_application = "0.2.1"
nalgebra = "0.31.2"

[workspace.dependencies.learnopengl-utils]
path = 'utils'

