[package]
name = "learnopengl-utils"

authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { workspace = true }
glutin = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
partial_application = {workspace = true}

[[test]]
name = "gltests"
path = "src/shader/test/main.rs"
harness = false
