[package]
name = "p1ch7_textures_wrapping"
authors.workspace = true
version.workspace = true
edition.workspace = true


[dependencies]
learnopengl-utils = { workspace = true }
bytemuck = { workspace = true }
gl = { workspace = true }
glutin = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

