[package]
name = "p1_ch8_glm"
authors.workspace = true
version.workspace = true
edition.workspace = true


[dependencies]
learnopengl-utils = { workspace = true }
bytemuck = { workspace = true }
gl = { workspace = true }
glutin = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
